feat: city and country in request